# fp-homework

./: README.md  stack.yaml
hw1/: README.md  hw1.cabal
hw1/src/: Fold.hs  Lists.hs  Monoids.hs  Nat.hs  Simple.hs  Test.hs  Town.hs  Tree.hs  Weekday.hs
hw2/: README.md  hw2.cabal
hw2/app/: ArithTest.hs  Main.hs  ParserTest.hs  TypesTest.hs
hw2/src/: Arithmetic.hs  Parser.hs  Types.hs
hw3/: LICENSE  README.md  hw3.cabal
hw3/app/: Main.hs
hw3/res/: fact.in  fib.in  test.in  test.txt
hw3/src/: Arithmetic.hs  Error.hs  Operators.hs  Parser.hs  Variables.hs
hw3/test/: ArithTest.hs  OperatorTest.hs  ParserTest.hs  Spec.hs  VarTest.hs
hw4/: LICENSE  hw4.cabal
hw4/app/: Main.hs
hw4/src/: FileSystem.hs  Lens.hs  Template.hs  TemplateHaskell.hs  Walk.hs
hw4/test/: SimpleLensTest.hs  Spec.hs
