name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/VladYagl/fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Vlad Yaglamunov
maintainer:          VladYaglamunov@gmail.com
copyright:           2018 Vlad Yaglamunov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Arithmetic, Types, Parser
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       ArithTest, TypesTest, ParserTest
  build-depends:       base
                     , hw2
                     , tasty
                     , tasty-hspec
                     , hedgehog
                     , tasty-hedgehog
  default-language:    Haskell2010
