name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/VladYagl/fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Vlad Yaglamunov
maintainer:          VladYaglamunov@gmail.com
copyright:           2018 Vlad Yaglamunov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     TemplateHaskell, Template, Lens, FileSystem, Walk
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , template-haskell
                     , text
                     -- , lens
                     , microlens-platform
                     , directory
                     , filepath
                     , mtl
  default-language:    Haskell2010

executable walker
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw4
                     , mtl
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       SimpleLensTest
  build-depends:       base
                     , hw4
                     , hspec
  default-language:    Haskell2010
